--- a/_posts/2019-07-25-19025-diary.md
+++ b/_posts/2019-07-25-19025-diary.md
@@ -7,7 +7,9 @@ author: onecode
 ---
 看了会书，本想在这个差点荒废的博客上写点总结，却发现以前写的一段创建新博文的python脚本失效。
 
-不知道脑子里在想起来，我开始读起自己2016年有段时间在博客里写的日记。还挺有趣，除了错别字有点多。
+不知道脑子里在想什么，我开始读起自己2016年有段时间在博客里写的日记。还挺有趣，除了错别字有点多。
+
+<!--break-->
 
 想想早期做博客还很在意流量和SEO，整日折腾。现在在意的，恐怕是懒了吧。
 
