--- a/_posts/2019-07-28-190728-quanzhigaoshou.md
+++ b/_posts/2019-07-28-190728-quanzhigaoshou.md
@@ -7,9 +7,11 @@ author: onecode
 ---
 早起终于基本完成了工作材料准备。
 
-《全职高手》我是最喜欢的看的网络小说，看过很多遍。其实没什么内涵，可能因为是爽文喜欢主线的情节，或者喜欢里面主角的任务性格。总之，看的很舒服。
+《全职高手》我是最喜欢的看的网络小说，看过很多遍。其实没什么内涵，可能因为是爽文喜欢主线的情节，或者喜欢里面主角的人物性格。总之，看的很舒服。
 
-昨天看了电视剧，对电视剧本身无感，但足以勾起我的回忆。大不了，从头再来。
+昨天看了电视剧，对电视剧本身无感，但足以勾起我的回忆。
+
+大不了，从头再来。
 
 
 2019年7月28日 晨
