--- a/_posts/2019-08-14-190816-friday-sunny.md
+++ b/_posts/2019-08-14-190816-friday-sunny.md
@@ -11,6 +11,6 @@ author: onecode
 
 有人说女人怕长大，男人长不大。
 
-本来今天没打算写日记，因为不知道些什么。但刚才看了一遍之前的日记，又打算写了。给自己留点趣味。
+本来今天没打算写日记，因为不知道写什么。但刚才看了一遍之前的日记，又打算写了。给自己留点趣味。
 
 最近晚上坐在椅子上拿着手机就能睡着了。
