--- a/_posts/2024-06-28-svnvsgit.md
+++ b/_posts/2024-06-28-svnvsgit.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: SVN与Git对比分析
+title: SVN与Git功能差异对比分析
 date: 2024-06-28 14:30 +0800
 author: onecoder
 comments: true
@@ -8,7 +8,7 @@ tags: [svn,git]
 thread_key: 150
 ---
 最近在调研学习Git管理和分支模型相关内容，外延到了SVN和Git差异、工作原理等相关细节，学习整理如下。
-SVN（Subversion）与 Git 的最大不同以及各自的优劣势，主要包括以下几个方面：
+SVN（Subversion）与 Git 的最大不同，主要包括以下几个方面：
 <!--more-->
 ### 架构
 - 集中式 vs 分布式：
