add qq group link to post.html

--- a/_posts/2024-06-28-svnvsgit.md
+++ b/_posts/2024-06-28-svnvsgit.md
@@ -72,22 +72,18 @@ SVN（Subversion）与 Git 的最大不同，主要包括以下几个方面：
         - 适用于分布式团队和开源项目，开发者可以在本地进行开发，然后通过 Pull Request 等机制进行协作。
           
 ### 总结
-#### SVN 的优势
+#### SVN 的特点
 - 简单易学，适合小型项目和团队。
 - 集中式管理适合需要严格控制和管理的项目。
-  
-#### SVN 的劣势
 - 性能受限于网络速度和服务器负载。
 - 分支和合并操作复杂且性能较差。
 - 离线工作能力较弱。
   
-#### Git 的优势
+#### Git 的特点
 - 分布式架构，性能高效，支持离线操作。
 - 轻量级分支和高效的合并操作，适合频繁的分支管理。
 - 灵活的协作模式，适用于分布式团队和开源项目。
-  
-#### Git 的劣势
 - 学习曲线较陡，需要时间掌握其强大的功能和复杂的操作。
 - 初始设置和配置相对复杂，可能需要一定的学习和适应时间。
   
-综上所述，Git 的分布式架构、轻量级分支和高效的合并机制使其在现代软件开发中更具优势，特别是对于大规模、分布式和开源项目。而 SVN 的集中式管理和相对简单的操作适合小型团队和需要集中控制的项目。
+综上，本文仅对针对Git和SVN各子的特点进行一个对比总结，不涉及详细的优劣势分析。在此基础上，后续会针对二者​数据存储和分支管理的原理进行深入分析研究，总而最终总结出二者的[优劣势对比分析](https://www.coderli.com/detailed-analysis-of-the-drawbacks-of-svn-vs-git/)。
