--- a/_posts/2012-05-29-win764-jdk.md
+++ b/_posts/2012-05-29-win764-jdk.md
@@ -5,7 +5,7 @@ date: 2012-05-29 12:09 +0800
 author: onecoder
 comments: true
 tags: [Eclipse, JDK, Windows]
-categories: [Java技术研究]
+categories: [Java技术研究,JDK]
 thread_key: 88
 ---
 	
