--- a/_posts/2012-07-13-java-i-jvm.md
+++ b/_posts/2012-07-13-java-i-jvm.md
@@ -5,7 +5,7 @@ date: 2012-07-13 08:03 +0800
 author: onecoder
 comments: true
 tags: [Java]
-categories: [Java技术研究]
+categories: [Java技术研究,JDK]
 thread_key: 924
 ---
 昨晚有朋友问我这样的一个问题。
