add new post gesp3001-3004

--- a/_posts/2024-09-10-gesp-1-bcqm3001-3004.md
+++ b/_posts/2024-09-10-gesp-1-bcqm3001-3004.md
@@ -3,7 +3,7 @@ layout: post
 title: 【GESP】C++一级练习BCQM3001-3004，基本输出语句cout
 date: 2024-09-10 21:17 +0800
 author: OneCoder
-image: /images/post/gesp/compile-version.png
+image: /images/post/gesp/3001-3004.png
 comments: true
 tags: [GESP, C++]
 categories: [GESP, 一级]
@@ -94,6 +94,8 @@ int main() {
     return 0;
 }
 ```
+
+{% include custom/custom-post-content-inner.html %}
 
 ## BCQM3003
 
