--- a/_posts/2024-09-16-gesp-1-bcqm3007.md
+++ b/_posts/2024-09-16-gesp-1-bcqm3007.md
@@ -69,3 +69,5 @@ int main() {
     return 0;
 }
 ```
+
+所有代码已上传至Github：[***https://github.com/lihongzheshuai/yummy-code***](https://github.com/lihongzheshuai/yummy-code)
