3011 change preview img

--- a/_posts/2024-09-19-gesp-1-bcqm3011.md
+++ b/_posts/2024-09-19-gesp-1-bcqm3011.md
@@ -3,7 +3,7 @@ layout: post
 title: 【GESP】C++一级练习BCQM3011，简单数学应用题
 date: 2024-09-19 20:00 +0800
 author: OneCoder
-image: /images/post/gesp/3011.png
+image: /images/post/gesp/gesp-1.png
 comments: true
 tags: [GESP, C++]
 categories: [GESP, 一级]
