--- a/_posts/2024-09-28-gesp-1-bcqm3024.md
+++ b/_posts/2024-09-28-gesp-1-bcqm3024.md
@@ -42,17 +42,16 @@ categories: [GESP, 一级]
 
 ### 题目分析
 
-同[***BCQM3020***](https://www.coderli.com/gesp-1-bcqm3020/)，变量4个，计算加合而已。
+题型[***BCQM3023***](https://www.coderli.com/gesp-1-bcqm3023/)，变量2个，然后计算乘积输出，只不过在本题里埋了一个小小的坑，就是题目要求的输出格式，要先写上“***总的棵树:***”再加上结果。。
 
 #### 代码参考
 
 ```cpp
-#include <iostream>
-using namespace std;
+#include <cstdio>
 int main() {
-    int a, b, c, d;
-    cin >> a >> b >> c >> d;
-    cout << a + b + c + d;
+    int a, b;
+    scanf("%d%d", &a, &b);
+    printf("总的棵数：%d", a * b);
     return 0;
 }
 ```
