--- a/_posts/2024-09-29-gesp-1-bcqm3025.md
+++ b/_posts/2024-09-29-gesp-1-bcqm3025.md
@@ -44,7 +44,7 @@ categories: [GESP, 一级]
 
 代码逻辑不再赘述，稍微介绍一下计算逻辑，这个问题可以通过集合的方式来分析，下面详细讲解解题思路：
 
-### 1. 分析已知条件
+#### 1. 分析已知条件
 
 - 学校四年级二班有 \( n \) 个人。
 - 参加语文兴趣小组的有 \( a \) 个人。
@@ -57,7 +57,7 @@ categories: [GESP, 一级]
 - 设参加数学兴趣小组的学生集合为 \( B \)，那么 \( |B| = b \)。
 - 两个小组都参加的学生数量为 \( c \)，即 \( A \cap B = c \)。
 
-### 2. 使用集合的公式
+#### 2. 使用集合的公式
 
 根据集合的加法原则，我们可以得到参加至少一个兴趣小组的学生数：
 \[
@@ -65,7 +65,7 @@ categories: [GESP, 一级]
 \]
 其中，\( |A \cup B| \) 表示参加至少一个兴趣小组的学生数量。
 
-### 3. 计算未参加任何小组的学生数
+#### 3. 计算未参加任何小组的学生数
 
 所有学生的总人数是 \( n \)，因此没有参加任何兴趣小组的学生数就是：
 \[
