fix post 3025 math exp

--- a/_posts/2024-09-29-gesp-1-bcqm3025.md
+++ b/_posts/2024-09-29-gesp-1-bcqm3025.md
@@ -1,5 +1,6 @@
 ---
 layout: post
+math: true
 title: 【GESP】C++一级练习BCQM3025，输入-计算-输出-6
 date: 2024-09-29 08:00 +0800
 author: OneCoder
@@ -53,24 +54,22 @@ categories: [GESP, 一级]
 
 我们可以用集合来表示这些学生的分布：
 
-- 设参加语文兴趣小组的学生集合为 \( A \)，那么 \( |A| = a \)。
-- 设参加数学兴趣小组的学生集合为 \( B \)，那么 \( |B| = b \)。
-- 两个小组都参加的学生数量为 \( c \)，即 \( A \cap B = c \)。
+- 设参加语文兴趣小组的学生集合为 \( A \)，那么 \( \|A\| = a \)。
+- 设参加数学兴趣小组的学生集合为 \( B \)，那么 \( \|B\| = b \)。
+- 两个小组都参加的学生数量为 \( c \)，即 \( A $\cap$ B = c \)。
 
 #### 2. 使用集合的公式
 
 根据集合的加法原则，我们可以得到参加至少一个兴趣小组的学生数：
 \[
-|A \cup B| = |A| + |B| - |A \cap B| = a + b - c
+\|A $\cup$ B\| = \|A\| + \|B\| - \|A $\cap$ B\| = a + b - c
 \]
-其中，\( |A \cup B| \) 表示参加至少一个兴趣小组的学生数量。
+其中，\( \|A $\cup$ B\| \) 表示参加至少一个兴趣小组的学生数量。
 
 #### 3. 计算未参加任何小组的学生数
 
 所有学生的总人数是 \( n \)，因此没有参加任何兴趣小组的学生数就是：
-\[
-n - |A \cup B| = n - (a + b - c)
-\]
+n - \|A $\cup$ B\| = n - (a + b - c)
 
 #### 代码参考
 
