--- a/_posts/2024-10-03-gesp-1-bcqm3033.md
+++ b/_posts/2024-10-03-gesp-1-bcqm3033.md
@@ -36,12 +36,11 @@ categories: [GESP, 一级]
 #### 输出样例
 
 >7  
-0   
-1   
-1   
-1   
-0   
-
+0  
+1  
+1  
+1  
+0  
 ---
 
 ### 题目分析
@@ -81,7 +80,7 @@ int main() {
 }
 ```
 
-#### 代码分析：
+#### 代码分析
 
 1. **输入和初始化**：
    - `scanf("%d", &a);`：从用户输入一个整数 `a`，表示金额（单位：元）。
@@ -108,7 +107,7 @@ int main() {
    - `rest = rest % 5;`：计算出剩余金额。
 
 7. **1元的张数**：
-   - 剩下的`rest`就是1元的张数。 
+   - 剩下的`rest`就是1元的张数。
 
 8. **输出结果**：
    - 程序逐行输出每个面额的钞票张数。
