--- a/_posts/2024-10-08-gesp-1-bcqm3040.md
+++ b/_posts/2024-10-08-gesp-1-bcqm3040.md
@@ -84,6 +84,21 @@ int main() {
 }
 ```
 
+其实还有一个更直接快速的方法，就是利用整数计算取整的特性直接 N / K * K，即可得到答案。
+
+#### 代码参考-直接计算
+
+```cpp
+#include <iostream>
+using namespace std;
+int main() {
+    int n, k;
+    cin >> n >> k;
+    cout << n / k * k;
+    return 0;
+}
+```
+
 ---
 
 所有代码已上传至Github：[***https://github.com/lihongzheshuai/yummy-code***](https://github.com/lihongzheshuai/yummy-code)
