--- a/_posts/2024-10-10-gesp-1-bcqm3048.md
+++ b/_posts/2024-10-10-gesp-1-bcqm3048.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: 【GESP】C++一级练习BCQM3048，浮点计算，四舍五入
+title: 【GESP】C++一级练习BCQM3048，顺序执行、逆推运算
 date: 2024-10-10 23:00 +0800
 author: OneCoder
 comments: true
