--- a/_posts/2024-10-11-gesp-1-bcqm3049.md
+++ b/_posts/2024-10-11-gesp-1-bcqm3049.md
@@ -7,11 +7,11 @@ comments: true
 tags: [GESP, C++]
 categories: [GESP, 一级]
 ---
-一级知识点整形`int`和`for`循环练习。
+GESP一级知识点整形`int`和`for`循环练习。
 
 <!--more-->
 
-## BCQM3048
+## BCQM3049
 
 ### 题目要求
 
