--- a/_posts/2024-10-12-gesp-1-bcqm3052.md
+++ b/_posts/2024-10-12-gesp-1-bcqm3052.md
@@ -61,6 +61,24 @@ int main() {
 }
 ```
 
+附一个纯数学方法计算的代码
+
+#### 代码参考-数学方法
+
+```cpp
+#include <iostream>
+using namespace std;
+int main() {
+    int x, y;
+    cin >> x >> y;
+    int chicken, rabbit;
+    chicken = (x  * 4 - y) / 2;
+    rabbit = x - chicken;
+    cout<< chicken << " " << rabbit;
+    return 0;
+}
+```
+
 ---
 
 所有代码已上传至Github：[***https://github.com/lihongzheshuai/yummy-code***](https://github.com/lihongzheshuai/yummy-code)
