--- a/_posts/2024-10-14-gesp-2-bcqm3144.md
+++ b/_posts/2024-10-14-gesp-2-bcqm3144.md
@@ -7,7 +7,7 @@ comments: true
 tags: [GESP, C++]
 categories: [GESP, 二级]
 ---
-一级知识点for循环的应用+二级知识点ASCII码应用的题目，因此归类为二级题目。没什么难度，遇到了就做了，主要为了练习for循环。
+一级知识点`for`循环的应用+二级知识点`ASCII`码应用的题目，因此归类为二级题目。没什么难度，遇到了就做了，主要为了练习`for`循环。
 
 <!--more-->
 
