--- a/_posts/2024-10-18-gesp-1-bcqm3148.md
+++ b/_posts/2024-10-18-gesp-1-bcqm3148.md
@@ -64,7 +64,7 @@ int main() {
 
 仔细检查代码逻辑无误后，我只能尝试用`printf`输出语句，结果执行时间大大缩短，全部通过。
 
-本以为是`printf`执行效率大于`cout`，但是查阅资料却发现好像理论不是这样，并且自己进行了大量的循环测试，确实cout快，目前暂不知道原因，也希望大佬赐教。
+本以为是`printf`执行效率大于`cout`，但是查阅资料却发现好像理论不是这样，并且自己进行了大量的循环测试，却是`cout`快，目前暂不知道原因，也希望大佬赐教。
 
 #### 代码参考
 
@@ -77,6 +77,38 @@ int main() {
         printf("%d\n", i);
     }
     return 0;
+}
+```
+
+附上性能测试代码，希望有大佬能帮忙分析原因
+
+```cpp
+#include <iostream>
+#include <cstdio>
+#include <chrono>  // 用于时间测量
+
+int main() {
+    int iterations = 10000;
+
+    // 测量 printf 的性能
+    auto start = std::chrono::high_resolution_clock::now();
+    for (int i = 0; i < iterations; ++i) {
+        printf("%d\n", i);
+    }
+    auto end = std::chrono::high_resolution_clock::now();
+    std::cout << "printf: "
+              << std::chrono::duration<double>(end - start).count()
+              << " 秒" << std::endl;
+
+    // 测量 cout 的性能
+    auto start = std::chrono::high_resolution_clock::now();
+    for (int i = 0; i < iterations; ++i) {
+        std::cout << i << std::endl;
+    }
+    auto end = std::chrono::high_resolution_clock::now();
+    std::cout << "cout: "
+              << std::chrono::duration<double>(end - start).count()
+              << " 秒" << std::endl;
 }
 ```
 
