new post cout printf

--- a/_posts/2024-10-18-gesp-1-bcqm3148.md
+++ b/_posts/2024-10-18-gesp-1-bcqm3148.md
@@ -80,7 +80,9 @@ int main() {
 }
 ```
 
-附上性能测试代码，希望有大佬能帮忙分析原因
+附上性能测试代码，希望有大佬能帮忙分析原因。
+
+2024年10月19日更新，[C++一级知识点研究，cout和printf差异分析](https://www.coderli.com/gesp-knowledge-cout-printf/)，从理论上分析一下现象和可能的原因。
 
 ```cpp
 #include <iostream>
