fix post cout printf

--- a/_posts/2024-10-18-gesp-1-bcqm3148.md
+++ b/_posts/2024-10-18-gesp-1-bcqm3148.md
@@ -80,39 +80,10 @@ int main() {
 }
 ```
 
-附上性能测试代码，希望有大佬能帮忙分析原因。
+希望有大佬能帮忙分析原因。
 
 2024年10月19日更新，[C++一级知识点研究，cout和printf差异分析](https://www.coderli.com/gesp-knowledge-cout-printf/)，从理论上分析一下现象和可能的原因。
 
-```cpp
-#include <iostream>
-#include <cstdio>
-#include <chrono>  // 用于时间测量
-
-int main() {
-    int iterations = 10000;
-
-    // 测量 printf 的性能
-    auto start = std::chrono::high_resolution_clock::now();
-    for (int i = 0; i < iterations; ++i) {
-        printf("%d\n", i);
-    }
-    auto end = std::chrono::high_resolution_clock::now();
-    std::cout << "printf: "
-              << std::chrono::duration<double>(end - start).count()
-              << " 秒" << std::endl;
-
-    // 测量 cout 的性能
-    auto start = std::chrono::high_resolution_clock::now();
-    for (int i = 0; i < iterations; ++i) {
-        std::cout << i << std::endl;
-    }
-    auto end = std::chrono::high_resolution_clock::now();
-    std::cout << "cout: "
-              << std::chrono::duration<double>(end - start).count()
-              << " 秒" << std::endl;
-}
-```
 
 ---
 
