--- a/_posts/2024-10-21-gesp-1-bcqm3056.md
+++ b/_posts/2024-10-21-gesp-1-bcqm3056.md
@@ -7,7 +7,7 @@ comments: true
 tags: [GESP, C++]
 categories: [GESP, 一级]
 ---
-一级知识点简单运算练习，难点对于小学生来说反而在于是否了知道等差数列。
+一级知识点简单运算练习，难点对于小学生来说反而在于是否知道等差数列。
 
 <!--more-->
 
