--- a/_posts/2024-10-22-gesp-1-luogu-b3846.md
+++ b/_posts/2024-10-22-gesp-1-luogu-b3846.md
@@ -81,3 +81,5 @@ int main() {
 ---
 
 所有代码已上传至Github：[***https://github.com/lihongzheshuai/yummy-code***](https://github.com/lihongzheshuai/yummy-code)
+
+题目已加入洛谷[***Java、C++初学团队**](https://www.luogu.com.cn/team/92228)，[***GESP一级题单***](https://www.luogu.com.cn/training/632658#problems)，可在线评测，团队名额有限，欢迎加入。
