--- a/_posts/2024-10-31-gesp-1-luogu-b3922.md
+++ b/_posts/2024-10-31-gesp-1-luogu-b3922.md
@@ -7,7 +7,7 @@ comments: true
 tags: [GESP, C++]
 categories: [GESP, 一级]
 ---
-GESP一级真题练习。为2023年12月一级认证真题。
+GESP一级真题练习。为2023年12月一级认证真题。`for`循环和取余计算应用。
 
 <!--more-->
 
