--- a/_posts/2024-11-03-gesp-1-luogu-b3847.md
+++ b/_posts/2024-11-03-gesp-1-luogu-b3847.md
@@ -49,14 +49,14 @@ GESP一级模拟练习，时间相关的处理和计算方法。
 
 1. 时间单位的换算：
 
-- 1小时 = 3600秒
-- 1分钟 = 60秒
-- 秒数不做转换。
+   - 1小时 = 3600秒
+   - 1分钟 = 60秒
+   - 秒数不做转换。
 
-1. 判断是上午还是下午：
+2. 判断是上午还是下午：
 
-如果是上午 (A)，直接根据给定的时、分、秒来计算当天的秒数。
-如果是下午 (P)，则要将小时数加上12。
+   - 如果是上午 (A)，直接根据给定的时、分、秒来计算当天的秒数。
+   - 如果是下午 (P)，则要将小时数加上12。
 
 ### 示例代码
 
