--- a/_posts/2024-11-09-gesp-1-luogu-b4035.md
+++ b/_posts/2024-11-09-gesp-1-luogu-b4035.md
@@ -53,6 +53,8 @@ categories: [GESP, 一级]
 ### 示例代码
 
 ```cpp
+#include <iostream>
+using namespace std;
 int main() {
     int n; // 定义变量n
     cin >> n; // 从输入流中读取n的值
