--- a/_posts/2024-11-12-gesp-1-luogu-b3659.md
+++ b/_posts/2024-11-12-gesp-1-luogu-b3659.md
@@ -8,7 +8,7 @@ math: true
 tags: [GESP, C++]
 categories: [GESP, 一级]
 ---
-属于GESP一级知识点循环语句应用的题目，但是我个人觉得明显比一般的一级题目逻辑困难，涉及类似斐波那契数列的处理计算，姑且算作一级吧。
+属于GESP一级知识点循环语句应用的题目，在输入处理上增加了一点点难度。
 
 <!--more-->
 
