--- a/_posts/2024-11-16-gesp-2-luogu-b2056.md
+++ b/_posts/2024-11-16-gesp-2-luogu-b2056.md
@@ -6,7 +6,7 @@ author: OneCoder
 comments: true
 math: true
 tags: [GESP, C++]
-categories: [GESP, 一级]
+categories: [GESP, 二级]
 ---
 涉及二级知识点强制类型转换，主要还是一级知识点for循环练习。
 
