--- a/_posts/2024-11-17-gesp-1-luogu-b2069.md
+++ b/_posts/2024-11-17-gesp-1-luogu-b2069.md
@@ -8,7 +8,7 @@ math: true
 tags: [GESP, C++]
 categories: [GESP, 一级]
 ---
-一级练习，寻找一组数的最大值。是一个基础算法逻辑，在后面的题中会有大量的应用。
+一级练习，难道提升了一些。根据规律，构造数列计算。
 
 <!--more-->
 
