--- a/_posts/2024-11-18-gesp-1-luogu-b3648.md
+++ b/_posts/2024-11-18-gesp-1-luogu-b3648.md
@@ -8,7 +8,7 @@ math: true
 tags: [GESP, C++]
 categories: [GESP, 一级]
 ---
-穿插了一道很简单的题，小朋友热热手，回复一下信心。
+穿插了一道很简单的题，小朋友热热手，恢复一下信心。
 
 <!--more-->
 
@@ -18,7 +18,7 @@ categories: [GESP, 一级]
 
 #### 描述
 
->小 A 今年 $x$ 岁。他刚学了英语，想告诉其他人：`I am $x$ years old.`
+>小 A 今年 $x$ 岁。他刚学了英语，想告诉其他人：`I am x years old.`
 
 #### 输入
 
