--- a/_posts/2024-11-18-gesp-1-luogu-b2071.md
+++ b/_posts/2024-11-18-gesp-1-luogu-b2071.md
@@ -8,7 +8,7 @@ math: true
 tags: [GESP, C++]
 categories: [GESP, 一级]
 ---
-三级知识点一维数组练习，除了应用了数组以外，其余逻辑比较简单，适合初学者。
+一级知识点`while`循环和取余计算基础练习。
 
 <!--more-->
 
