--- a/_posts/2024-11-19-gesp-1-luogu-b2058.md
+++ b/_posts/2024-11-19-gesp-1-luogu-b2058.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: 【GESP】C++一级练习 luogu-B2058, 满足条件的数累加
+title: 【GESP】C++一级练习 luogu-B2058, 奥运奖牌计数
 date: 2024-11-19 13:00 +0800
 author: OneCoder
 comments: true
