--- a/_posts/2024-11-20-gesp-1-luogu-b2043.md
+++ b/_posts/2024-11-20-gesp-1-luogu-b2043.md
@@ -8,7 +8,7 @@ math: true
 tags: [GESP, C++]
 categories: [GESP, 一级]
 ---
-一级知识点循环和取余操作练习题，逻辑上需要一点小学生的小思考。
+一级知识点取余和条件判断语句练习题，涉及穷举所有可能。
 
 <!--more-->
 
