--- a/_posts/2024-11-20-gesp-1-luogu-b2043.md
+++ b/_posts/2024-11-20-gesp-1-luogu-b2043.md
@@ -75,8 +75,8 @@ int main() {
         cout << "3 7"; // 如果x被3和7整除，但不被5整除，则输出"3 7"
     } else if ((x % 5 == 0 && x % 7 == 0) && x % 3 != 0) {
         cout << "5 7"; // 如果x被5和7整除，但不被3整除，则输出"5 7"
-    } else if ((x % 3 == 0 && x % 5 == 0) && x % 7 != 0) {
-        cout << "3"; // 如果x被3和5整除，但不被7整除，则输出"3"
+    } else if ((x % 3 == 0 && x % 5 != 0) && x % 7 != 0) {
+        cout << "3"; // 如果x被3整除，但不被5和7整除，则输出"3"
     } else if ((x % 3 != 0 && x % 5 == 0) && x % 7 != 0) {
         cout << "5"; // 如果x被5整除，但不被3和7整除，则输出"5"
     } else if ((x % 3 != 0 && x % 5 != 0) && x % 7 == 0) {
