--- a/_posts/2024-11-23-gesp-1-luogu-b2074.md
+++ b/_posts/2024-11-23-gesp-1-luogu-b2074.md
@@ -65,19 +65,20 @@ Tuesday
 ```cpp
 #include <cstdio>
 #include <iostream>
-using namespace std;
+using namespace std; // 使用标准命名空间
 
 int main() {
-    int n; // 定义一个整数变量n，用于存储输入的第一个数
+    int n; // 定义一个整数变量n，用于存储输入的整数
     cin >> n; // 从输入流中读取n的值
-    int c; // 定义一个整数变量c，用于存储输入的第二个数
+    int c; // 定义一个整数变量c，用于存储输入的幂次
     cin >> c; // 从输入流中读取c的值
-    int ans = 1; // 初始化一个整数变量ans，用于存储结果，初始值为1
-    for (int i = 1; i <= c; i++) {
-        ans *= n; // 将ans乘以n，模拟过n的c次方天
-        ans %= 7; // 将ans的值模7，快速取模，避免溢出
+    int mod = n % 7; // 计算n对7的余数，用于确定初始星期几
+    int ans = mod; // 初始化答案为mod的值
+    for (int i = 1; i < c; i++) { // 循环从1到c-1
+        ans %= 7; // 对ans进行取模运算，确保结果在0到6之间
+        ans *= mod; // 将ans乘以mod，模拟幂次的计算
     }
-    // 根据ans模7的结果，输出对应的星期几
+    // 根据ans的值输出对应的星期几
     if (ans % 7 == 0) {
         cout << "Sunday";
     }
