--- a/_posts/2024-11-26-gesp-1-luogu-p1046.md
+++ b/_posts/2024-11-26-gesp-1-luogu-p1046.md
@@ -8,7 +8,7 @@ math: true
 tags: [GESP, C++]
 categories: [GESP, 一级]
 ---
-GESP一级练习，基本运算练习，有一些小学数学小逻辑，难度★☆☆☆☆。
+GESP一级练习，多输入，基本分支条件语句练习，难度★☆☆☆☆。
 
 <!--more-->
 
