--- a/_posts/2024-11-30-gesp-1-luogu-b2077.md
+++ b/_posts/2024-11-30-gesp-1-luogu-b2077.md
@@ -8,7 +8,7 @@ math: true
 tags: [GESP, C++]
 categories: [GESP, 一级]
 ---
-GESP一级循环和基本运算练习，但是相比普通的题来说，略有难度，难度★✮☆☆☆。
+GESP一级循环和基本运算练习，略有难度，尤其容易忽略数据类型选择的问题，难度★✮☆☆☆。
 
 <!--more-->
 
