--- a/_posts/2024-12-02-gesp-3-luogu-p1307.md
+++ b/_posts/2024-12-02-gesp-3-luogu-p1307.md
@@ -1,14 +1,14 @@
 ---
 layout: post
-title: 【GESP】C++一级练习 luogu-P1307, [NOIP2011 普及组] 数字反转
+title: 【GESP】C++三级练习 luogu-P1307, [NOIP2011 普及组] 数字反转
 date: 2024-12-02 12:00 +0800
 author: OneCoder
 comments: true
 math: true
 tags: [GESP, C++]
-categories: [GESP, 一级]
+categories: [GESP, 三级]
 ---
-GESP一级基本运算练习，题目很长，但是很简单，难度★☆☆☆☆。
+GESP三级一维数组练习，个人认为是练习到目前相对比较难的一道尤其对小孩子来说，值得练习，难度★✮☆☆☆。
 
 <!--more-->
 
