new post bcqm-3151

--- a/_posts/2024-12-05-gesp-1-bcqm-3151.md
+++ b/_posts/2024-12-05-gesp-1-bcqm-3151.md
@@ -81,10 +81,11 @@ int main() {
 
 ---
 
-所有代码已上传至Github：[***https://github.com/lihongzheshuai/yummy-code***](https://github.com/lihongzheshuai/yummy-code)
-
-GESP各级别考纲要点、知识拓展和练习题目清单详见[***C++学习项目主页***](https://github.com/lihongzheshuai/yummy-code)
-
-“***luogu-***”系列题目已加入洛谷[***Java、C++初学团队***](https://www.luogu.com.cn/team/92228)，[***作业清单***](https://www.luogu.com.cn/team/92228#homework)，可在线评测，团队名额有限，欢迎加入。
-
-“***bcqm-***”系列题目可在[***编程启蒙题库***](https://bas.ssoier.cn/index.php)进行在线评测。
+>所有代码已上传至Github：[***https://github.com/lihongzheshuai/yummy-code***](https://github.com/lihongzheshuai/yummy-code)
+>
+>GESP各级别考纲要点、知识拓展和练习题目清单详见[***C++学习项目主页***](https://github.com/lihongzheshuai/yummy-code)
+>
+>“***luogu-***”系列题目已加入洛谷[***Java、C++初学团队***](https://www.luogu.com.cn/team/92228)，[***作业清单***](https://www.luogu.com.cn/team/92228#homework)，可在线评测，团队名额有限，欢迎加入。
+>
+>“***bcqm-***”系列题目可在[***编程启蒙题库***](https://bas.ssoier.cn/index.php)进行在线评测。
+{: .prompt-info }
