--- a/_posts/2024-12-12-gesp-2-luogu-t259142.md
+++ b/_posts/2024-12-12-gesp-2-luogu-t259142.md
@@ -61,21 +61,21 @@ GESP二级练习，涉及多层条件和循环嵌套，难度★✮☆☆☆。
 ### 示例代码
 
 ```cpp
-#include <cstdio>
+#include <iostream>
+using namespace std;
 int main() {
-    int a, b, ans = 0; // 定义变量a、b和ans，ans初始化为0
-    scanf("%d%d", &a, &b); // 读取输入的两个整数a和b
-    for (int i = 1; i <= a; i++) { // 遍历从1到a的所有整数
-        int d = i; // 将当前整数i赋值给d
-        while (d != 0) { // 当d不为0时循环
-            ans = d % 10; // 计算d的最后一位数字
-            if (ans == b) { // 如果最后一位数字等于b
-                ans++; // ans自增1
-                d = d / 10; // 将d除以10，去掉最后一位数字
-            }
+    int n, x, ans = 0; // 定义变量n、x和计数器ans
+    cin >> n >> x; // 读取输入的n和x
+    for (int i = 1; i <= n; i++) { // 外层循环，从1到n遍历所有整数
+        int tmp = i, num; // 定义临时变量tmp和num
+        while (tmp != 0) { // 内层循环，对当前整数进行分解
+            num = tmp % 10; // 获取当前整数的最后一位数字
+            if (num == x) // 如果最后一位数字等于x
+                ans++; // 计数器自增1
+            tmp = tmp / 10; // 移除当前整数的最后一位数字
         }
     }
-    printf("%d", ans); // 输出ans的值
+    cout << ans; // 输出计数器ans的值，即数字x出现的次数
     return 0;
 }
 ```
