--- a/_posts/2024-12-15-gesp-2-luogu-b2082.md
+++ b/_posts/2024-12-15-gesp-2-luogu-b2082.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: 【GESP】C++二级练习 luogu-b2082, 数数字
+title: 【GESP】C++二级练习 luogu-b2082, 数字统计
 date: 2024-12-15 14:00 +0800
 author: OneCoder
 comments: true
