--- a/_posts/2024-12-16-gesp-2-luogu-b2081.md
+++ b/_posts/2024-12-16-gesp-2-luogu-b2081.md
@@ -52,6 +52,10 @@ GESP二级练习，涉及多层条件和循环嵌套，难度★✮☆☆☆。
 
 ### 示例代码
 
+#### 方法一
+
+利用了输入数据的数据范围限制，直接法
+
 ```cpp
 #include <iostream>
 using namespace std; // 使用标准命名空间
@@ -69,7 +73,9 @@ int main() {
 }
 ```
 
-利用之前[b2082](https://www.coderli.com/gesp-2-luogu-b2082/)练习类似逻辑，拓展到不仅限两位数情况的代码。
+#### 方法二
+
+利用之前[b2082](https://www.coderli.com/gesp-2-luogu-b2082/)练习类似逻辑，拓展到任意情况通用方法
 
 ```cpp
 #include <iostream>
