--- a/_posts/2024-12-31-gesp-2-luogu-b3638.md
+++ b/_posts/2024-12-31-gesp-2-luogu-b3638.md
@@ -81,25 +81,24 @@ $AC$ 距离：$\sqrt{(50-10)^2+(50-20)^2}\approx 50$
 
 ```cpp
 #include <cmath>
+#include <cstdio>
 #include <iostream>
 using namespace std;
 int main() {
-    // 定义三个点的坐标
+    // 读取三个点的坐标
     int x1, y1, x2, y2, x3, y3;
-    // 从输入流中读取三个点的坐标
     cin >> x1 >> y1 >> x2 >> y2 >> x3 >> y3;
-    // 定义三边的长度
+    // 计算三个点之间的距离
     double a, b, c;
-    // 计算三边的长度
-    a = sqrt((x1 - x2) * (x1 - x2) + (y1 - y2) * (y1 - y2));
-    b = sqrt((x1 - x3) * (x1 - x3) + (y1 - y3) * (y1 - y3));
-    c = sqrt((x2 - x3) * (x2 - x3) + (y2 - y3) * (y2 - y3));
-    // 计算半周长
+    a = sqrt((x1 - x2) * (x1 - x2) + (y1 - y2) * (y1 - y2)); // 计算AB距离
+    b = sqrt((x1 - x3) * (x1 - x3) + (y1 - y3) * (y1 - y3)); // 计算AC距离
+    c = sqrt((x2 - x3) * (x2 - x3) + (y2 - y3) * (y2 - y3)); // 计算BC距离
+    // 计算三角形的半周长
     double tmp = (a + b + c) / 2;
     // 计算三角形的面积
     double s = sqrt(tmp * (tmp - a) * (tmp - b) * (tmp - c));
-    // 输出三角形的面积，保留整数部分
-    printf("%.0lf", s);
+    // 输出三角形的面积
+    printf("%.0f", s);
     return 0;
 }
 ```
