--- a/_posts/2025-01-02-gesp-2-luogu-b3660.md
+++ b/_posts/2025-01-02-gesp-2-luogu-b3660.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: 【GESP】C++二级练习 luogu-B3660, 口算练习
+title: 【GESP】C++二级练习 luogu-B3660, 集卡
 date: 2025-01-02 08:00 +0800
 author: OneCoder
 comments: true
