--- a/_posts/2025-01-07-gesp-2-luogu-b3837.md
+++ b/_posts/2025-01-07-gesp-2-luogu-b3837.md
@@ -8,11 +8,11 @@ math: true
 tags: [GESP, C++]
 categories: [GESP, 二级]
 ---
-GESP二级练习，多层循环嵌套和ASCII练习，难度★✮☆☆☆。
+GESP二级真题，多层循环嵌套和ASCII练习，难度★✮☆☆☆。
 
 <!--more-->
 
-## luogu-B3844 [GESP202303 二级] 画三角形
+## luogu-B3837 [GESP202303 二级] 画三角形
 
 ### 题目要求
 
