--- a/_posts/2025-01-07-gesp-2-luogu-b3837.md
+++ b/_posts/2025-01-07-gesp-2-luogu-b3837.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: 【GESP】C++二级练习 luogu-B3837, [GESP202303 二级] 画三角形
+title: 【GESP】C++二级真题 luogu-B3837, [GESP202303 二级] 画三角形
 date: 2025-01-07 13:00 +0800
 author: OneCoder
 comments: true
