--- a/_posts/2025-01-20-gesp-3-luogu-t250431.md
+++ b/_posts/2025-01-20-gesp-3-luogu-t250431.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: 【GESP】C++二级练习 luogu-t250431, 找元素
+title: 【GESP】C++三级练习 luogu-t250431, 找元素
 date: 2025-01-20 08:00 +0800
 author: OneCoder
 comments: true
@@ -86,7 +86,7 @@ int main() {
     for (int i = 1; i <= n; i++) {
         cin >> a[i]; // 读取输入的a[i]
     }
-    for (int i = n; i >= 1; i--) {
+    for (int i = n - 1; i >= 0; i--) {
         if (a[i] == x) { // 如果a[i]等于x
             cout << i; // 输出i
             break; // 跳出循环
