--- a/_posts/2025-01-20-gesp-3-luogu-t250431.md
+++ b/_posts/2025-01-20-gesp-3-luogu-t250431.md
@@ -80,19 +80,20 @@ GESP三级练习，一维数组练习，难度★✮☆☆☆。
 using namespace std;
 
 int main() {
-    int n, x;
+    int n, x; // 定义变量n, x
     cin >> n; // 读取输入的n
     int a[n]; // 定义数组a，大小为n
-    for (int i = 1; i <= n; i++) {
-        cin >> a[i]; // 读取输入的a[i]
+    for (int i = 0; i < n; i++) { // 循环读取n个整数到数组a
+        cin >> a[i];
     }
-    for (int i = n - 1; i >= 0; i--) {
-        if (a[i] == x) { // 如果a[i]等于x
-            cout << i; // 输出i
-            break; // 跳出循环
+    cin >> x; // 读取输入的整数x
+    for (int i = n - 1; i >= 0; i--) { // 从数组a的末尾开始遍历，直到找到第一个等于x的元素
+        if (a[i] == x) {
+            cout << i + 1; // 输出找到的元素的位置
+            break; // 找到后跳出循环
         }
     }
-    return 0; // 返回0
+    return 0; // 返回0，表示程序正常结束
 }
 ```
 
