--- a/_posts/2025-01-22-gesp-2-luogu-b3658.md
+++ b/_posts/2025-01-22-gesp-2-luogu-b3658.md
@@ -72,7 +72,7 @@ GESP二级练习，多重分支嵌套/数学函数，难度★✮☆☆☆。
 #### 数据范围
 
 对于 $20\%$ 的数据，$y = 1$;  
-对于另外 $20\%$ 的数据，保证 $x = ky,k \in \Z$;  
+对于另外 $20\%$ 的数据，保证 $x = ky,k \in Z$;  
 对于另外 $20\%$ 的数据，保证 $x \times y >0 $;  
 对于 $100\%$ 的数据，$-10^3 \le x, y \le 10^3, y \neq 0$。
 
