--- a/_posts/2025-01-26-gesp-3-luogu-b2095.md
+++ b/_posts/2025-01-26-gesp-3-luogu-b2095.md
@@ -8,7 +8,7 @@ math: true
 tags: [GESP, C++]
 categories: [GESP, 三级]
 ---
-GESP三级练习，一维数据、循环分支嵌套，略有难度，难度★★☆☆☆。
+GESP三级练习，一维数组、循环分支嵌套，略有难度，难度★★☆☆☆。
 
 <!--more-->
 
