--- a/_posts/2025-01-27-gesp-2-luogu-p2669.md
+++ b/_posts/2025-01-27-gesp-2-luogu-p2669.md
@@ -68,16 +68,30 @@ GESP二级练习，循环分支嵌套，略有难度，难度★✮☆☆☆。
 
 解题思路分析：
 
+方法一：
+
 1. 初始化一个变量 `count` 来存储骑士收到的金币总数。
 2. 初始化一个变量 `days` 来表示当前的天数，初始值为 1。
 3. 使用一个循环来模拟每一天的金币发放。每次循环，骑士会在连续 `days` 天内，每天收到 `days` 枚金币。
 4. 在每次循环中，使用一个内部循环来模拟连续 `days` 天的金币发放。每天，`count` 会增加 `days` 枚金币，`i` 会增加 1，表示时间流逝。
 5. 当内部循环结束后，`days` 会增加 1，表示骑士开始收到更多的金币。
-6. 当 `i` 等于或超过 `k` 时，循环结束，输出 `count` 的值，即骑士在前 `k` 天收到的金币总数。
+6. 当 `i` 等于或超过 `k` 时，循环结束，输出 `count` 的值，即骑士在前 `k` 天收到的金币总数。4
+
+方法二：
+
+1. 初始化一个变量 `count` 来存储骑士收到的金币总数。
+2. 初始化一个变量 `days` 来表示当前的天数，初始值为 1。
+3. 初始化一个变量 `now_coins` 来表示当前天数收到的金币数，初始值为 1。
+4. 使用一个循环来模拟每一天的金币发放。每次循环，骑士会在连续 `days` 天内，每天收到 `now_coins` 枚金币。
+5. 在每次循环中，`count` 会增加 `now_coins` 枚金币，`days` 会减少 1，表示时间流逝。
+6. 当 `days` 等于 0 时，`now_coins` 会增加 1，表示骑士开始收到更多的金币，`days` 会重置为 `now_coins`。
+7. 当 `i` 等于或超过 `k` 时，循环结束，输出 `count` 的值，即骑士在前 `k` 天收到的金币总数。
 
 {% include custom/custom-post-content-inner.html %}
 
 ### 示例代码
+
+#### 方法一
 
 ```cpp
 #include <iostream>
@@ -94,6 +108,30 @@ int main() {
             i++; // 主循环计数器递增
         }
         days++; // 天数递增
+    }
+    cout << count; // 输出计数器的值
+    return 0;
+}
+```
+
+#### 方法二
+
+```cpp
+#include <iostream>
+using namespace std;
+int main() {
+    int k; // 输入的整数
+    cin >> k;
+    int count = 0; // 计数器
+    int days = 1; // 当前天数
+    int now_coins = 1; // 当前天数收到的金币数
+    for (int i = 1; i <= k; i++) { // 从1到k天的循环
+        count += now_coins; // 计数器累加当前天数的金币数
+        days--; // 天数减1
+        if (days == 0) { // 如果天数减到0
+            now_coins++; // 当前天数收到的金币数增加1
+            days = now_coins; // 重置天数为当前天数收到的金币数
+        }
     }
     cout << count; // 输出计数器的值
     return 0;
