--- a/_posts/2025-01-27-gesp-2-luogu-p2669.md
+++ b/_posts/2025-01-27-gesp-2-luogu-p2669.md
@@ -66,9 +66,7 @@ GESP二级练习，循环分支嵌套，略有难度，难度★✮☆☆☆。
 
 ### 题目分析
 
-解题思路分析：
-
-方法一：
+#### 方法一
 
 1. 初始化一个变量 `count` 来存储骑士收到的金币总数。
 2. 初始化一个变量 `days` 来表示当前的天数，初始值为 1。
@@ -77,7 +75,7 @@ GESP二级练习，循环分支嵌套，略有难度，难度★✮☆☆☆。
 5. 当内部循环结束后，`days` 会增加 1，表示骑士开始收到更多的金币。
 6. 当 `i` 等于或超过 `k` 时，循环结束，输出 `count` 的值，即骑士在前 `k` 天收到的金币总数。4
 
-方法二：
+#### 方法二
 
 1. 初始化一个变量 `count` 来存储骑士收到的金币总数。
 2. 初始化一个变量 `days` 来表示当前的天数，初始值为 1。
@@ -91,7 +89,7 @@ GESP二级练习，循环分支嵌套，略有难度，难度★✮☆☆☆。
 
 ### 示例代码
 
-#### 方法一
+#### 方法一代码
 
 ```cpp
 #include <iostream>
@@ -114,7 +112,7 @@ int main() {
 }
 ```
 
-#### 方法二
+#### 方法二代码
 
 ```cpp
 #include <iostream>
