--- a/_posts/2025-02-04-gesp-2-luogu-b3670.md
+++ b/_posts/2025-02-04-gesp-2-luogu-b3670.md
@@ -64,7 +64,12 @@ GESP二级练习，多重循环、分支语句练习，难度★☆☆☆☆。
 
 #### 解题思路
 
-
+1. 首先，读取输入的玉桂狗玩偶数量 $n$ 和某 E 的钱数 $R$。
+2. 初始化一个变量 `max` 来存储某 E 能够买到的最可爱的玉桂狗玩偶的可爱度，初始值为 0。
+3. 使用一个循环来遍历每只玉桂狗玩偶。
+4. 对于每只玉桂狗玩偶，读取其可爱度 $k$ 和价格 $p$。
+5. 如果当前玉桂狗玩偶的可爱度 $k$ 大于 `max` 且价格 $p$ 小于或等于某 E 的钱数 $R$，则更新 `max` 的值为 $k$。
+6. 输出 `max` 的值，即某 E 能够买到的最可爱的玉桂狗玩偶的可爱度。
 
 {% include custom/custom-post-content-inner.html %}
 
@@ -76,17 +81,17 @@ GESP二级练习，多重循环、分支语句练习，难度★☆☆☆☆。
 #include <iostream>
 using namespace std;
 int main() {
-    int n, r;
-    cin >> n >> r;
-    int k, p;
-    int max = 0;
-    for (int i = 1; i <= n; i++) {
-        cin >> k >> p;
-        if (k > max && p <= r) {
-            max = k;
+    int n, r; // 定义变量n和r
+    cin >> n >> r; // 读取输入的n和r
+    int k, p; // 定义变量k和p
+    int max = 0; // 初始化变量max为0
+    for (int i = 1; i <= n; i++) { // 遍历每只玉桂狗玩偶
+        cin >> k >> p; // 读取当前玉桂狗玩偶的可爱度k和价格p
+        if (k > max && p <= r) { // 如果当前玉桂狗玩偶的可爱度k大于max且价格p小于或等于某E的钱数r
+            max = k; // 更新max的值为k
         }
     }
-    cout << max;
+    cout << max; // 输出max的值，即某E能够买到的最可爱的玉桂狗玩偶的可爱度
     return 0;
 }
 ```
