--- a/_posts/2025-02-06-gesp-2-luogu-b3924.md
+++ b/_posts/2025-02-06-gesp-2-luogu-b3924.md
@@ -8,7 +8,7 @@ math: true
 tags: [GESP, C++]
 categories: [GESP, 二级]
 ---
-GESP二级真题，多层循环、分支语句、数学函数练习，难度★✮☆☆☆。
+GESP二级真题，多层循环、分支语句练习，难度★✮☆☆☆。
 
 <!--more-->
 
