--- a/_posts/2025-02-06-gesp-2-luogu-b3995.md
+++ b/_posts/2025-02-06-gesp-2-luogu-b3995.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: 【GESP】C++二级真题 luogu-b3995, [GESP 二级模拟] 小洛的田字矩阵
+title: 【GESP】C++二级模拟 luogu-b3995, [GESP 二级模拟] 小洛的田字矩阵
 date: 2025-02-06 13:00 +0800
 author: OneCoder
 comments: true
