--- a/_posts/2025-02-07-gesp-2-luogu-B3994.md
+++ b/_posts/2025-02-07-gesp-2-luogu-B3994.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: 【GESP】C++二级模拟 luogu-B3994, [GESP 二级模拟] 周长与面积计算
+title: 【GESP】C++二级模拟 luogu-b3994, [GESP 二级模拟] 周长与面积计算
 date: 2025-02-07 08:00 +0800
 author: OneCoder
 comments: true
