--- a/_posts/2025-02-09-gesp-3-luogu-p1567.md
+++ b/_posts/2025-02-09-gesp-3-luogu-p1567.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: 【GESP】C++三级模拟 luogu-p1567, 统计天数
+title: 【GESP】C++三级练习 luogu-p1567, 统计天数
 date: 2025-02-09 21:00 +0800
 author: OneCoder
 comments: true
