--- a/_posts/2025-02-10-gesp-2-luogu-b4007.md
+++ b/_posts/2025-02-10-gesp-2-luogu-b4007.md
@@ -8,7 +8,7 @@ math: true
 tags: [GESP, C++]
 categories: [GESP, 二级]
 ---
-GESP二级真题，一维数组，多层循环和分支练习，难度★✮☆☆☆。
+GESP二级真题，多层循环和分支练习，难度★✮☆☆☆。
 
 <!--more-->
 
