--- a/_posts/2025-02-13-gesp-2-luogu-b4064.md
+++ b/_posts/2025-02-13-gesp-2-luogu-b4064.md
@@ -79,18 +79,19 @@ using namespace std;
 int main() {
     int n; // 读取测试数据的数量
     cin >> n;
-    int a; // 存储每个测试数据
+    int a; // 读取正整数 a
     for (int i = 1; i <= n; i++) {
-        cin >> a; // 读取每个测试数据
-        bool flag = false; // 标志是否找到满足条件的正整数
-        double c = sqrt(sqrt(a)); // 计算可能的正整数
-        if ((int)c * (int)c * (int)c * (int)c == a) {
-            flag = true; // 如果计算的结果满足条件，则标志为真
+        cin >> a;
+        bool flag = false; // 初始化标志位
+        double c = sqrt(sqrt(a)); // 计算4次方根
+        int d = (int)c; // 强转为整数
+        if (pow(d, 4) == a) { // 检查是否满足条件
+            flag = true; // 如果满足条件，则设置标志位为真
         }
-        if (flag == true) {
-            cout << (int)c << endl; // 如果找到满足条件的正整数，则输出
+        if (flag) {
+            cout << d << endl; // 如果存在满足条件的正整数，则输出
         } else {
-            cout << "-1"; // 否则输出-1
+            cout << -1 << endl; // 否则输出 -1
         }
     }
     return 0;
