fix some posts title

--- a/_posts/2025-02-14-gesp-2-luogu-p1304.md
+++ b/_posts/2025-02-14-gesp-2-luogu-p1304.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: 【GESP】C++二级真题 luogu-P1304 哥德巴赫猜想
+title: 【GESP】C++二级练习 luogu-P1304 哥德巴赫猜想
 date: 2025-02-14 08:00 +0800
 author: OneCoder
 comments: true
