--- a/_posts/2025-02-17-gesp-2-luogu-b2073.md
+++ b/_posts/2025-02-17-gesp-2-luogu-b2073.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: 【GESP】C++二级真题 luogu-B2073 求小数的某一位
+title: 【GESP】C++二级练习 luogu-B2073 求小数的某一位
 date: 2025-02-17 08:00 +0800
 author: OneCoder
 comments: true
