--- a/_posts/2025-02-18-gesp-2-luogu-b3700.md
+++ b/_posts/2025-02-18-gesp-2-luogu-b3700.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: 【GESP】C++二级真题 luogu-B3700 [语言月赛202301] 九九乘方表
+title: 【GESP】C++二级练习 luogu-B3700 [语言月赛202301] 九九乘方表
 date: 2025-02-18 08:00 +0800
 author: OneCoder
 comments: true
