--- a/_posts/2025-02-19-gesp-2-luogu-b3710.md
+++ b/_posts/2025-02-19-gesp-2-luogu-b3710.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: 【GESP】C++二级真题 luogu-B3710 [语言月赛202302] 破碎的历史
+title: 【GESP】C++二级练习 luogu-B3710 [语言月赛202302] 破碎的历史
 date: 2025-02-19 08:00 +0800
 author: OneCoder
 comments: true
