--- a/_posts/2025-02-21-gesp-2-luogu-b3698.md
+++ b/_posts/2025-02-21-gesp-2-luogu-b3698.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: 【GESP】C++二级真题 luogu-B3698 [语言月赛202301] 一次函数
+title: 【GESP】C++二级练习 luogu-B3698 [语言月赛202301] 一次函数
 date: 2025-02-21 08:00 +0800
 author: OneCoder
 comments: true
