--- a/_posts/2025-02-25-gesp-2-luogu-b3707.md
+++ b/_posts/2025-02-25-gesp-2-luogu-b3707.md
@@ -119,21 +119,23 @@ Yes
 #### 解题思路
 
 1. 首先，我们需要理解题目的核心要求：
-   - 计算 $a^b$ 的末3位数字
-   - 不足3位需要在前面补0
+   - 判断不同类型的棋子是否能够吃掉对方棋子
 
 2. 解题思路：
-   - 直接计算 $a^b$ 会导致数字过大，超出整型范围
-   - 我们只需要关注末3位数字，可以在每次计算时只保留末3位
-   - 具体做法是每次乘法后对1000取模
+   - 根据棋子类型，确定其移动规则
+   - 车：可以在同一行或同一列移动
+   - 炮：在此题中设定为不能吃掉对方棋子
+   - 马：可以移动到“日”字形的8个位置
+   - 象：可以移动到对角线的4个位置
 
 3. 具体实现：
-   - 读入底数a和指数b
-   - 用一个变量ans记录当前结果,初始值为a
-   - 循环b-1次:
-     - 每次将ans乘以a
-     - 取乘积的末3位(对1000取模)存回ans
-   - 最后输出ans的3位数字，不足补0
+   - 读入棋子类型p和坐标(x, y)及目标坐标(g, h)
+   - 根据p的值，判断棋子类型
+   - 对于车，检查是否在同一行或同一列
+   - 对于炮，直接输出不能吃掉
+   - 对于马，检查是否在“日”字形的8个位置
+   - 对于象，检查是否在对角线的4个位置
+   - 输出结果为“是”或“否”表示能否吃掉对方棋子
 
 {% include custom/custom-post-content-inner.html %}
 
@@ -145,34 +147,37 @@ Yes
 #include <iostream>
 using namespace std;
 int main() {
-    int p, x, y, g, h;
-    cin >> p >> x >> y >> g >> h;
-    if (p == 1) {
-        if (x == g || y == h) {
-            cout << "Yes";
+    int p, x, y, g, h;  // 定义变量：棋子类型p，当前坐标(x,y)，目标坐标(g,h)
+    cin >> p >> x >> y >> g >> h;  // 输入棋子类型和坐标
+    
+    if (p == 1) {  // 处理车的情况
+        if (x == g || y == h) {  // 判断是否在同一行或同一列
+            cout << "Yes";  // 可以吃掉
         } else {
-            cout << "No";
+            cout << "No";  // 不能吃掉
         }
-    } else if (p == 2) {
-        cout << "No";
-    } else if (p == 3) {
+    } else if (p == 2) {  // 处理炮的情况
+        cout << "No";  // 直接输出不能吃掉
+    } else if (p == 3) {  // 处理马的情况
+        // 判断是否在马的8个可能位置
         if ((g == x + 2 && h == y + 1) || (g == x + 2 && h == y - 2) ||
             (g == x - 2 && h == y + 1) || (g == x - 2 && h == y - 1) ||
             (g == x + 1 && h == y + 2) || (g == x + 1 && h == y - 2) ||
             (g == x - 1 && h == y + 2) || (g == x - 1 && h == y - 2)) {
-            cout << "Yes";
+            cout << "Yes";  // 可以吃掉
         } else {
-            cout << "No";
+            cout << "No";  // 不能吃掉
         }
-    } else {
+    } else {  // 处理象的情况
+        // 判断是否在象的4个可能位置
         if ((g == x + 2 && h == y + 2) || (g == x + 2 && h == y - 2) ||
             (g == x - 2 && h == y + 2) || (g == x - 2 && h == y - 2)) {
-            cout << "Yes";
+            cout << "Yes";  // 可以吃掉
         } else {
-            cout << "No";
+            cout << "No";  // 不能吃掉
         }
     }
-    return 0;
+    return 0;  // 程序正常结束
 }
 ```
 
