--- a/_posts/2025-02-26-gesp-2-luogu-p1426.md
+++ b/_posts/2025-02-26-gesp-2-luogu-p1426.md
@@ -8,7 +8,7 @@ math: true
 tags: [GESP, C++]
 categories: [GESP, 二级]
 ---
-GESP二级练习，多层循环和分支练习，难度★★☆☆☆。
+GESP二级练习，多层循环和分支练习，难度★✮☆☆☆。
 
 <!--more-->
 
