--- a/_posts/2025-02-14-gesp-2-luogu-p1304.md
+++ b/_posts/2025-02-14-gesp-2-luogu-p1304.md
@@ -8,7 +8,7 @@ math: true
 tags: [GESP, C++]
 categories: [GESP, 二级]
 ---
-GESP二级真题，多层循环和分支练习，难度★★☆☆☆。
+GESP二级联系，多层循环和分支练习，难度★★☆☆☆。
 
 <!--more-->
 
