--- a/_posts/2025-03-12-gesp-2-luogu-p4956.md
+++ b/_posts/2025-03-12-gesp-2-luogu-p4956.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: 【GESP】C++二级练习 luogu-P4956 [COCI 2017/2018 #6] Davor
+title: 【GESP】C++二级练习 luogu-P4956 [COCI 2017/2018 \#6] Davor
 date: 2025-03-12 08:00 +0800
 author: OneCoder
 comments: true
