--- a/_posts/2025-03-16-gesp-2-luogu-b3735.md
+++ b/_posts/2025-03-16-gesp-2-luogu-b3735.md
@@ -8,7 +8,7 @@ math: true
 tags: [GESP, C++]
 categories: [GESP, 二级]
 ---
-GESP二级练习，多层循环分支练习，难度★✮☆☆☆。
+GESP二级练习，一道数学小题，难度★☆☆☆☆。
 
 <!--more-->
 
@@ -70,28 +70,29 @@ GESP二级练习，多层循环分支练习，难度★✮☆☆☆。
 #### 解题思路
 
 1. 首先，我们需要理解题目的核心要求：
-   - 两个玩家：Farmer John和Bessie
-   - 初始时各自有一定数量的石头
-   - 游戏规则：
-     - 轮流操作，Farmer John先手
-     - 如果石头数小于对方：从堆中拿1块
-     - 如果石头数不小于对方：扔掉一半（向下取整）
-     - 当一方石头数为0时游戏结束
+   - 圣诞树有n层结构
+   - 第i层有i个星星
+   - 星星之间用绳子连接：
+     - 每层的星星都与下一层最近的两个星星相连
+     - 最后一层相邻星星之间也要连接
 
 2. 解题思路：
-   - 输入处理：
-     - 读取测试用例数量T
-     - 每组测试用例包含两个数x,y（分别是Farmer John和Bessie的初始石头数）
-   - 游戏模拟：
-     - 使用循环模拟游戏过程
-     - 用布尔变量标记当前回合的玩家
-     - 根据规则更新石头数量
-     - 直到有一方石头数为0
-   - 输出结果：
-     - 输出最终两人的石头数量
-   - 注意：
-     - 数据范围较大，需要使用long long类型
-     - 需要处理多组测试数据
+   - 分析绳子的构成：
+     - 垂直连接的绳子：每层星星向下连接
+     - 水平连接的绳子：最后一层星星之间的连接
+   - 计算方法：
+     - 垂直连接：
+       - 第i层每个星星向下连接2根绳子
+       - 除最后一层外的所有层都需要向下连接
+     - 水平连接：
+       - 最后一层相邻星星之间的连接
+       - 需要n-1根绳子
+   - 数学公式：
+     - 垂直连接绳子数 = (2 + (n-1)*2)*(n-1)/2
+     - 水平连接绳子数 = n-1
+     - 总绳子数 = 垂直连接 + 水平连接
+   - 特殊情况：
+     - n=1时不需要绳子=1时不需要绳子
 
 {% include custom/custom-post-content-inner.html %}
 
@@ -103,14 +104,22 @@ GESP二级练习，多层循环分支练习，难度★✮☆☆☆。
 #include <iostream>
 using namespace std;
 int main() {
+    // 定义变量n用于存储圣诞树的层数
     int n;
+    // 从标准输入读取层数
     cin >> n;
+    // 定义变量ans用于存储所需绳子的总段数
     int ans = 0;
+    // 如果只有一层，不需要绳子
     if (n == 1) {
         ans = 0;
     } else {
+        // 计算所需绳子总段数
+        // 每层向下连接的绳子数：(2 + (n-1)*2)*(n-1)/2
+        // 最后一层相邻星星之间的绳子数：(n-1)
         ans = (2 + (n - 1) * 2) * (n - 1) / 2 + (n - 1);
     }
+    // 输出结果
     cout << ans;
     return 0;
 }
