--- a/_posts/2025-03-17-gesp-2-luogu-p1720.md
+++ b/_posts/2025-03-17-gesp-2-luogu-p1720.md
@@ -55,27 +55,26 @@ GESP二级练习，数学函数练习，难度★☆☆☆☆。
 #### 解题思路
 
 1. 首先，我们需要理解题目的核心要求：
-   - 输入三个正整数 x, y, z
-   - 求这三个数的最大公约数
-   - 最大公约数定义：能同时整除这三个数的最大正整数
+   - 输入一个自然数 n
+   - 计算斐波那契数列的第 n 项
+   - 结果需要保留两位小数
 
 2. 解题思路：
    - 基本方法：
-     - 从三个数中的最小值开始向下遍历
-     - 找到第一个能同时整除三个数的数即为最大公约数
+     - 使用斐波那契数列的通项公式直接计算
+     - 公式：$F_n=\dfrac{\left(\frac{1+\sqrt{5}}{2}\right)^n-\left(\frac{1-\sqrt{5}}{2}\right)^n}{\sqrt{5}}$
    - 实现步骤：
-     - 获取输入的三个数
-     - 找出三个数中的最小值
-     - 从最小值开始递减遍历
-     - 判断当前数是否能同时整除三个输入数
+     - 获取输入的自然数 n
+     - 计算公式中的两个幂次项
+     - 将结果相减后除以根号5
+     - 按要求格式化输出
    - 优化考虑：
-     - 一旦找到符合条件的数就可以停止遍历
-     - 最大公约数一定是正整数
-     - 最大公约数不会超过输入数字中的最小值
+     - 使用 double 类型保证计算精度
+     - 使用 cmath 库中的 pow 和 sqrt 函数进行计算
    - 时间复杂度：
-     - O(min(x,y,z))，最坏情况下需要遍历到1
+     - O(1)，使用通项公式可以直接计算结果
    - 特殊情况：
-     - 由题目限制条件可知，输入的数都是正整数，不需要考虑负数和零的情况
+     - 由题目限制条件可知，0 ≤ n ≤ 48，不需要考虑过大数值的情况
 
 {% include custom/custom-post-content-inner.html %}
 
@@ -90,11 +89,20 @@ GESP二级练习，数学函数练习，难度★☆☆☆☆。
 
 using namespace std;
 int main() {
+    // 读取输入的n
     int n;
     cin >> n;
+    
+    // 计算斐波那契数列通项公式中的第一项：(1+√5)/2的n次方
     double u = pow(((1 + sqrt(5)) / 2), n);
+    
+    // 计算斐波那契数列通项公式中的第二项：(1-√5)/2的n次方
     double y = pow(((1 - sqrt(5)) / 2), n);
+    
+    // 计算最终结果：两项之差除以√5
     double fn = (u - y) / sqrt(5);
+    
+    // 按照题目要求输出保留两位小数的结果
     printf("%.2f", fn);
     return 0;
 }
