--- a/_posts/2025-03-25-gesp-2-luogu-b4259.md
+++ b/_posts/2025-03-25-gesp-2-luogu-b4259.md
@@ -54,40 +54,40 @@ GESP二级真题，多层循环练习，难度★✮☆☆☆。
 
 #### 解题思路
 
-跟[***图形8***](https://www.coderli.com/gesp-2-local-08-dia-mid-pic/#google_vignette)完全相似的题目，只需要把十字换成中间一个点即可。
+这道题目主要考察多层循环和矩阵的构造。让我们来分析一下解题思路：
 
-1. 观察图形特点
-   - 整体是一个n×n的方阵
-   - 中心有一个十字形
-   - 外围是一个菱形
-   - 图形关于中心点对称
+1. 理解题目要求
+   - 构造一个n行m列的矩阵
+   - 矩阵中第i行第j列的元素为i×j
+   - 要求每行和每列都是等差数列
 
-2. 确定关键点
-   - 中心点坐标：(mid, mid)，其中mid = (n+1)/2
-   - 十字线：所有行/列坐标等于mid的点
-   - 菱形边界：到中心的曼哈顿距离等于mid-1的点
+2. 分析矩阵特点
+   - 每一行是以i为公差的等差数列
+   - 每一列是以j为公差的等差数列
+   - 第i行的首项是i
+   - 第j列的首项是j
 
 3. 实现方案
-   - 使用双重循环遍历n×n矩阵
-   - 对于每个点(i,j)，判断是否需要打印星号：
-     - 如果在十字线上（i=mid 或 j=mid）打印星号
-     - 如果到中心的距离等于mid-1，打印星号
-     - 否则打印空格
+   - 使用双重循环遍历矩阵
+   - 外层循环控制行号i
+   - 内层循环控制列号j
+   - 每个位置填入i×j
 
 4. 代码实现要点
    - 外层循环：i从1到n
-   - 内层循环：j从1到n
-   - 使用abs()函数计算距离
-   - 每行结束输出换行
+   - 内层循环：j从1到m
+   - 每个数字后输出空格
+   - 每行末尾换行
 
 5. 复杂度分析
-   - 时间复杂度：O(n²)
+   - 时间复杂度：O(n×m)
    - 空间复杂度：O(1)
 
 6. 注意事项
-   - 输入n必须是奇数
-   - n=1时为特殊情况，只输出一个星号
-   - 注意空格的打印，保持图形对称美观
+   - 输入的n和m都是正整数
+   - 数字间要用空格分隔
+   - 每行末尾要换行
+   - 注意数据范围：1≤n,m≤50
 
 {% include custom/custom-post-content-inner.html %}
 
@@ -100,14 +100,21 @@ GESP二级真题，多层循环练习，难度★✮☆☆☆。
 using namespace std;
 
 int main() {
+    // 定义行数n和列数m
     int n, m;
+    // 从控制台读入n和m
     cin >> n >> m;
+    // 外层循环控制行数
     for (int i = 1; i <= n; i++) {
+        // 内层循环控制列数
         for (int j = 1; j <= m; j++) {
+            // 输出第i行第j列的数值，即i*j，数字间用空格分隔
             cout << i * j << " ";
         }
+        // 每行结束后换行
         cout << endl;
     }
+    // 程序结束
     return 0;
 }
 ```
