--- a/_posts/2025-03-28-gesp-3-luogu-b2190.md
+++ b/_posts/2025-03-28-gesp-3-luogu-b2190.md
@@ -49,40 +49,38 @@ Today is 2021-03-27
 #### 解题思路
 
 1. 观察题目特点
-   - 输入年月日时和时间跨度k小时
-   - 需要计算k小时后的具体时间
-   - 需要考虑时间进位问题
-   - 需要处理闰年判断
+   - 输入一行字符串
+   - 需要统计数字字符的个数
+   - 字符串长度不超过255
+   - 字符串可能包含任意字符
 
-2. 分析时间规律
-   - 小时进位：超过24小时进1天
-   - 日期进位：根据不同月份天数判断
-   - 月份进位：超过12月进1年
-   - 闰年处理：影响2月天数判断
+2. 分析解题思路
+   - 遍历字符串的每个字符
+   - 判断字符是否为数字（0-9）
+   - 累计数字字符的个数
+   - 输出统计结果
 
 3. 实现方案
-   - 先处理小时进位
-   - 然后处理日期进位（需考虑大小月和闰年）
-   - 最后处理月份进位
-   - 输出最终结果
+   - 使用string存储输入字符串
+   - 使用getline读取一整行
+   - 遍历字符串统计数字
+   - 输出计数结果
 
 4. 代码实现要点
-   - 处理小时进位：h += k
-   - 判断闰年：能被400整除或能被4整除但不能被100整除
-   - 处理月份天数：大月31天，小月30天，2月特殊处理
-   - 按格式输出结果
+   - 使用string类型存储输入
+   - 使用getline读取含空格的字符串
+   - 判断字符是否为数字：ch >= '0' && ch <= '9'
+   - 使用计数器统计数字个数
 
 5. 复杂度分析
-   - 时间复杂度：O(1)
+   - 时间复杂度：O(n)，n为字符串长度
    - 空间复杂度：O(1)
 
 6. 注意事项
-   - 输入数据保证合法
-   - 年份范围：2000≤y≤3000
-   - 月份范围：1≤m≤12
-   - 日期范围：1≤d≤31
-   - 小时范围：0≤h≤23
-   - 时间跨度：1≤k≤24
+   - 输入字符串可能包含空格
+   - 需要统计所有数字字符，包括重复的
+   - 只统计0-9的数字字符
+   - 字符串长度限制255
 
 {% include custom/custom-post-content-inner.html %}
 
@@ -95,15 +93,23 @@ Today is 2021-03-27
 #include <string>
 
 int main() {
+    // 定义字符串变量存储输入
     std::string str;
+    // 读取一整行输入到字符串中
     std::getline(std::cin, str);
+    // 定义计数器，用于统计数字字符的个数
     int count = 0;
+    // 遍历字符串中的每个字符
     for (int i = 0; i < str.size(); i++) {
+        // 判断当前字符是否为数字（ASCII码在'0'到'9'之间）
         if (str[i] >= '0' && str[i] <= '9') {
+            // 如果是数字字符，计数器加1
             count++;
         }
     }
+    // 输出统计结果
     std::cout << count << std::endl;
+    // 程序正常结束
     return 0;
 }
 ```
