--- a/_posts/2025-04-01-gesp-3-luogu-b3842.md
+++ b/_posts/2025-04-01-gesp-3-luogu-b3842.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: 【GESP】C++三级练习 luogu-B3842 [GESP202306 三级] 春游
+title: 【GESP】C++三级真题 luogu-B3842 [GESP202306 三级] 春游
 date: 2025-03-04 08:30 +0800
 author: OneCoder
 comments: true
