--- a/_posts/2025-04-15-gesp-3-luogu-b2122.md
+++ b/_posts/2025-04-15-gesp-3-luogu-b2122.md
@@ -53,22 +53,21 @@ world
 
 #### 解题思路
 
-1. 读取一整行输入的句子，包含单词、空格、逗号和句号
+1. 读取一整行输入的句子，句子中只包含小写字母和空格
 2. 遍历句子中的每个字符：
    - 遇到字母时，将其加入当前单词
-   - 遇到分隔符（空格、逗号或句号）时，判断当前单词：
-     - 如果当前单词长度大于最长单词，更新最长单词
-     - 如果当前单词长度小于最短单词，更新最短单词
+   - 遇到空格时：
+     - 将当前单词翻转（将字母顺序颠倒）
+     - 输出翻转后的单词
      - 清空当前单词，准备处理下一个单词
-3. 遍历结束后，还需要检查最后一个单词（如果句子不以分隔符结尾）
-4. 按要求格式输出最长和最短单词：
-   - 第一行输出最长单词
-   - 第二行输出最短单词
+3. 遍历结束后，需要处理最后一个单词：
+   - 将最后一个单词翻转
+   - 输出翻转后的单词
 
 **复杂度分析：**
 
 - 时间复杂度为 $O(n)$，其中n为输入句子的总长度
-- 空间复杂度为 $O(m)$，其中m为最长单词的长度
+- 空间复杂度为 $O(w)$，其中w为单个单词的最大长度
   
 {% include custom/custom-post-content-inner.html %}
 
@@ -110,17 +109,26 @@ int main() {
 #include <iostream>
 
 int main() {
+    // 定义字符串变量存储输入的句子
     std::string str;
+    // 读取一整行输入
     std::getline(std::cin, str);
+    // 定义字符串变量存储当前处理的单词
     std::string cur_str;
+    // 遍历输入的字符串
     for (int i = 0; i < str.length(); i++) {
+        // 如果遇到空格，说明一个单词处理完成
         if (str[i] == ' ') {
+            // 输出当前已翻转的单词
             std::cout << cur_str << std::endl;
+            // 清空当前单词，准备处理下一个
             cur_str = "";
         } else {
+            // 将当前字符添加到单词前面，实现翻转效果
             cur_str = str[i] + cur_str;
         }
     }
+    // 输出最后一个单词（因为最后一个单词后面没有空格）
     std::cout << cur_str << std::endl;
     return 0;
 }
