--- a/_posts/2025-04-17-gesp-3-luogu-b2123.md
+++ b/_posts/2025-04-17-gesp-3-luogu-b2123.md
@@ -48,21 +48,20 @@ GESP三级练习，字符串练习（C++三级大纲中6号知识点，字符串
 
 #### 解题思路
 
-1. 读取一整行输入的句子，句子中只包含小写字母和空格
-2. 遍历句子中的每个字符：
-   - 遇到字母时，将其加入当前单词
-   - 遇到空格时：
-     - 将当前单词翻转（将字母顺序颠倒）
-     - 输出翻转后的单词
-     - 清空当前单词，准备处理下一个单词
-3. 遍历结束后，需要处理最后一个单词：
-   - 将最后一个单词翻转
-   - 输出翻转后的单词
+1. 读取一个由数字字符组成的字符串
+2. 遍历字符串中的每个字符：
+   - 统计当前数字字符连续出现的次数
+   - 当遇到不同的数字字符时：
+     - 将前一个数字的出现次数和数字本身加入结果
+     - 重置计数器
+     - 更新当前正在统计的数字
+3. 处理最后一组数字：
+   - 将最后一个数字的出现次数和数字本身加入结果
 
 **复杂度分析：**
 
-- 时间复杂度为 $O(n)$，其中n为输入句子的总长度
-- 空间复杂度为 $O(w)$，其中w为单个单词的最大长度
+- 时间复杂度为 $O(n)$，其中n为输入字符串的长度
+- 空间复杂度为 $O(n)$，其中n为输入字符串的长度（最坏情况下，每个数字都不相同）
   
 {% include custom/custom-post-content-inner.html %}
 
@@ -70,28 +69,42 @@ GESP三级练习，字符串练习（C++三级大纲中6号知识点，字符串
 
 ### 示例代码
 
-#### 方法一：利用stringstream和reverse函数
-
 ```cpp
 #include <iostream>
 #include <string>
 
 int main() {
+    // 用于存储输入的字符串
     std::string str;
     std::cin >> str;
+    
+    // 用于存储最终的p型编码结果
     std::string result;
-    int cur_count = 1;
-    char cur_char = str[0];
-    for (int i = 1; i < str.length();i++) {
+    
+    // 初始化计数器和当前字符
+    int cur_count = 1;  // 记录当前字符的连续出现次数
+    char cur_char = str[0];  // 记录当前正在统计的字符
+    
+    // 从第二个字符开始遍历字符串
+    for (int i = 1; i < str.length(); i++) {
         if (str[i] == cur_char) {
+            // 如果当前字符与前一个字符相同，计数器加1
             cur_count++;
         } else {
+            // 如果遇到不同的字符：
+            // 1. 将当前统计结果添加到结果字符串
+            // 2. 重置计数器
+            // 3. 更新当前字符
             result += std::to_string(cur_count) + cur_char;
             cur_count = 1;
             cur_char = str[i];
         }
     }
+    
+    // 处理最后一组字符
     result += std::to_string(cur_count) + cur_char;
+    
+    // 输出p型编码结果
     std::cout << result;
     return 0;
 }
