--- a/_posts/2025-05-04-gesp-3-luogu-b3843.md
+++ b/_posts/2025-05-04-gesp-3-luogu-b3843.md
@@ -61,21 +61,29 @@ sjdkffH$123
 
 #### 解题思路
 
-1. 读取输入的学生总数N和报数次数M
-2. 使用数组记录每个学生编号的出现情况：
-   - 创建大小为N的布尔数组，初始化为false
-   - 遍历M个报出的编号，将对应编号位置标记为true
-3. 检查未到达的学生：
-   - 遍历布尔数组
-   - 如果某位置为false，说明该编号学生未到达
-4. 输出结果：
-   - 如果所有学生都到达，输出N
-   - 否则按升序输出未到达学生的编号
+1. 读取输入字符串并按逗号分割：
+   - 使用getline读取一行输入
+   - 遍历字符串，按逗号分割成多个密码字符串
+   - 将分割后的密码存入数组
+
+2. 检查每个密码的合规性：
+   - 检查密码长度是否在6-12个字符之间
+   - 检查是否只包含合法字符（小写字母、大写字母、数字、特殊字符!@#$）
+   - 统计包含的字符类型：
+     - 小写字母(a-z)
+     - 大写字母(A-Z)
+     - 数字(0-9)
+     - 特殊字符(!@#$)
+   - 验证是否满足至少两种字母/数字和至少一个特殊字符的要求
+
+3. 输出合规密码：
+   - 按输入顺序输出所有合规的密码
+   - 每个密码占一行
 
 **复杂度分析：**
 
-- 时间复杂度为 $O(N+M)$，其中N为学生总数，M为报数次数
-- 空间复杂度为 $O(N)$，需要一个大小为N的数组记录到达情况
+- 时间复杂度：$O(n×m)$，其中n为输入字符串总长度，m为单个密码的最大长度
+- 空间复杂度：$O(n)$，需要存储分割后的密码字符串
   
 {% include custom/custom-post-content-inner.html %}
 
@@ -88,12 +96,17 @@ sjdkffH$123
 #include <string>
 
 int main() {
+    // 读取输入字符串
     std::string input;
     getline(std::cin, input);
+
+    // 用于存储分割后的密码
     int count = 0;
     std::string cur_pwd;
     std::string str_ary[100] = {""};
     int ary_len = 0;
+
+    // 按逗号分割输入字符串
     for (int i = 0; i < input.length(); i++) {
         if (input[i] == ',') {
             cur_pwd = input.substr(i - count, count);
@@ -103,20 +116,29 @@ int main() {
         } else {
             count++;
         }
+        // 处理最后一个密码
         if (i == input.length() - 1) {
             cur_pwd = input.substr(i - count + 1, count);
             str_ary[ary_len] = cur_pwd;
             ary_len++;
         }
     }
+
+    // 遍历检查每个密码
     for (int i = 0; i < ary_len; i++) {
         bool flag = true;
         std::string cur = str_ary[i];
+        
+        // 检查密码长度
         if (cur.length() < 6 || cur.length() > 12) {
             flag = false;
             continue;
         }
-        int type[4] = {0};
+
+        // 记录密码包含的字符类型
+        int type[4] = {0}; // 0:小写字母 1:大写字母 2:数字 3:特殊字符
+        
+        // 遍历密码中的每个字符
         for (int j = 0; j < str_ary[i].length(); j++) {
             if (cur[j] >= 'a' && cur[j] <= 'z') {
                 type[0] = 1;
@@ -128,21 +150,29 @@ int main() {
                        cur[j] == '$') {
                 type[3] = 1;
             } else {
+                // 包含非法字符
                 flag = false;
                 break;
             }
         }
+
         if (!flag) {
             continue;
         }
+
+        // 统计字符类型数量
         int sum = 0;
         for (int k = 0; k < 3; k++) {
             sum += type[k];
         }
+
+        // 检查是否满足字符类型要求
         if (sum < 2 || type[3] == 0) {
             flag = false;
             continue;
         }
+
+        // 输出合规密码
         std::cout << cur << std::endl;
     }
     return 0;
