--- a/_posts/2025-05-07-gesp-3-luogu-b3867.md
+++ b/_posts/2025-05-07-gesp-3-luogu-b3867.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: 【GESP】C++真题 luogu-B3867 [GESP202309 三级] 小杨的储蓄
+title: 【GESP】C++三级真题 luogu-B3867 [GESP202309 三级] 小杨的储蓄
 date: 2025-05-07 08:00 +0800
 author: OneCoder
 comments: true
