new post b3926 & fix post b3925

--- a/_posts/2025-05-13-gesp-3-luogu-b3925.md
+++ b/_posts/2025-05-13-gesp-3-luogu-b3925.md
@@ -8,7 +8,7 @@ math: true
 tags: [GESP, C++]
 categories: [GESP, 三级]
 ---
-GESP三级真，多重循环和数学计算相关，难度★★☆☆☆。
+GESP三级真题，多重循环和数学计算相关，难度★★☆☆☆。
 
 <!--more-->
 
