--- a/_posts/2024-11-09-gesp-1-luogu-b4035.md
+++ b/_posts/2024-11-09-gesp-1-luogu-b4035.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: 【GESP】C++一级真题 luogu-B4035，美丽数字
+title: 【GESP】C++一级真题 luogu-B4035[GESP202409 一级] 美丽数字
 date: 2024-11-10 20:00 +0800
 author: OneCoder
 comments: true
@@ -11,7 +11,7 @@ categories: [GESP, 一级]
 
 <!--more-->
 
-## luogu-B4035
+## luogu-B4035[GESP202409 一级] 美丽数字
 
 ### 题目要求
 
